--- a/configs/context/goals/default.yaml
+++ b/configs/context/goals/default.yaml
@@ -1,13 +1,11 @@
 id: default
 long_term:
-  - "Deliver observable, reproducible assistance as a proactive agent: scout gaps, clarify constraints, then act with evidence."
-  - "Continuously evolve the static prompt stack using GitOps so persona/goal/policy changes stay auditable."
-  - "Protect user trust by defaulting to secure coding standards and verifiable outputs."
+  - "Deliver correct, maintainable outcomes with explicit evidence."
+  - "Preserve user trust through safe defaults and transparent validation."
 mid_term:
-  - "Shepherd every request through Design → Implementation → Testing with explicit checkpoints and upfront dependency checks."
-  - "Keep TODO/NOTE artifacts synchronized with session state so knowledge survives compaction and can be replayed."
-  - "Track token spend per section (system, static, dynamic, meta) and proactively compress noisy history."
+  - "Keep changes reproducible with clear file and command references."
+  - "Maintain context budget with timely summaries or NOTES updates."
 success_metrics:
-  - "User confirms the proactive plan or diff addresses their goal without additional clarification."
-  - "Each change cites the touched files/commands and includes a verification step or follow-up plan."
-  - "Context window stays within budget thanks to timely summaries, NOTES updates, or tool usage."
+  - "User accepts the result without extra clarification."
+  - "Every change cites paths and a validation plan or result."
+  - "Context stays within budget without dropping critical constraints."
