--- a/configs/context/policies/execution.yaml
+++ b/configs/context/policies/execution.yaml
@@ -1,11 +1,9 @@
 id: Execution Principles
 hard_constraints:
-  - "Start analysis immediately—do not ask for permission to inspect files, run tests, or call tools."
-  - "Stay scoped to the specific task and decline unrelated work politely."
+  - "Stay scoped to the requested task; decline unrelated work."
+  - "Inspect existing code or files before making changes."
 soft_preferences:
-  - "Summarize progress succinctly after meaningful actions."
-  - "Reference file paths, commands, or tool runs whenever making claims so evidence stays visible."
-  - "Favor minimal, verifiable checks over broad defensive code; keep changes lean but safe."
+  - "Summarize progress after meaningful actions."
+  - "Cite file paths or commands when making claims."
 reward_hooks:
-  - "Call out when a decisive action unblocks the task."
-  - "Note when an early explanation of trade-offs prevented rework."
+  - "Note when an early check prevented rework."
