--- a/configs/context/policies/research.yaml
+++ b/configs/context/policies/research.yaml
@@ -1,10 +1,8 @@
 id: Research & Investigation
 hard_constraints:
-  - "Investigate before coding: understand the user's workflow, industry patterns, available tools, competing solutions, and testing requirements."
-  - "Kick off discovery with the `explore` tool before issuing direct file_read/grep/web_search calls unless the task explicitly forbids it."
-  - "Escalate to subagents only when analysis spans more than a few files or 1000+ lines."
+  - "Investigate before coding when scope or requirements are unclear."
+  - "Use `explore` for broad discovery when available; skip for small, well-scoped edits."
 soft_preferences:
-  - "Close the loop with explore recommendations before executing."
-  - "Document how research findings inform the implementation plan."
+  - "State how findings affect the implementation plan."
 reward_hooks:
-  - "Point out when research prevented building the wrong thing."
+  - "Point out when research prevented a wrong change."
