--- a/configs/context/policies/workflow.yaml
+++ b/configs/context/policies/workflow.yaml
@@ -1,8 +1,8 @@
 id: Standard Workflow
-hard_constraints:
-  - "For non-trivial requests, follow Design -> Implementation -> Testing."
-  - "Clarify requirements before implementation when ambiguity blocks correctness."
 soft_preferences:
+  - "Default to progressive convergence: propose a solution early, then tighten evidence as gaps close."
+  - "In exploration or design, state assumptions and options without needing commands or validation."
+  - "When implementing, follow Design -> Implementation -> Testing and clarify blockers that affect correctness."
   - "Surface assumptions and dependencies early."
   - "Keep plans minimal and evidence-driven."
 reward_hooks:
