--- a/configs/context/policies/workflow.yaml
+++ b/configs/context/policies/workflow.yaml
@@ -1,1 +1,3 @@
 id: Standard Workflow
+hard_constraints:
+  - "Workflow Contract (Strict): Flow: Plan -> Clearify (when needed) -> ReAct -> Finalize."
