--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 # ALEX SSE Service Configuration
 # Copy this file to .env and fill in your actual values
 
-# LLM API Configuration (remote providers only)
+# LLM API Configuration
 # OPENAI_API_KEY=your-api-key-here
 
 # Canonical runtime config env vars (preferred)
-LLM_PROVIDER=local
-LLM_BASE_URL=http://127.0.0.1:11437/v1
-LLM_MODEL=functiongemma-270m-it
+LLM_PROVIDER=openai
+LLM_BASE_URL=https://api.openai.com/v1
+LLM_MODEL=gpt-4o-mini
 # Optional: model used when image attachments are present
 # LLM_VISION_MODEL=gpt-4o-mini
 
