Unify config under YAML

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,22 @@
 # ALEX SSE Service Configuration
 # Copy this file to .env and fill in your actual values
 
-# LLM API Configuration
+# LLM API secrets (referenced via config.yaml)
 # OPENAI_API_KEY=your-api-key-here
+# TAVILY_API_KEY=your-tavily-key
+# ARK_API_KEY=your-ark-key
 
-# Canonical runtime config env vars (preferred)
-LLM_PROVIDER=openai
-LLM_BASE_URL=https://api.openai.com/v1
-LLM_MODEL=gpt-4o-mini
-# Optional: model used when image attachments are present
-# LLM_VISION_MODEL=gpt-4o-mini
+# Cloudflare (attachments)
+# CLOUDFLARE_ACCOUNT_ID=
+# CLOUDFLARE_ACCESS_KEY_ID=
+# CLOUDFLARE_SECRET_ACCESS_KEY=
+# CLOUDFLARE_BUCKET=
+# CLOUDFLARE_PUBLIC_BASE_URL=
+# CLOUDFLARE_ATTACHMENT_KEY_PREFIX=
 
-# Optional: override ~/.alex-config.json location
-# ALEX_CONFIG_PATH=/path/to/alex-config.json
-
-# Logging
-ALEX_VERBOSE=false
+# Runtime config lives in ~/.alex/config.yaml (see examples/config/runtime-config.yaml)
+# Optional: override runtime config location
+# ALEX_CONFIG_PATH=/path/to/config.yaml
 
 # Networking / Proxy (optional)
 # ALEX_PROXY_MODE=auto  # auto|strict|direct
@@ -25,19 +26,13 @@ REDIS_URL=
 
 # Authentication (optional)
 AUTH_JWT_SECRET=dev-secret-change-me
-AUTH_ACCESS_TOKEN_TTL_MINUTES=15
-AUTH_REFRESH_TOKEN_TTL_DAYS=30
-AUTH_REDIRECT_BASE_URL=http://localhost:8080
 AUTH_DATABASE_URL=postgres://alex:alex@localhost:5432/alex_auth?sslmode=disable
 AUTH_DB_USER=alex
 AUTH_DB_PASSWORD=alex
 AUTH_DB_NAME=alex_auth
 AUTH_DB_PORT=5432
 AUTH_DB_IMAGE=postgres:15
-AUTH_BOOTSTRAP_EMAIL=admin@example.com
 AUTH_BOOTSTRAP_PASSWORD=P@ssw0rd!
-AUTH_BOOTSTRAP_DISPLAY_NAME=Admin
-# GOOGLE_CLIENT_ID=
 # GOOGLE_CLIENT_SECRET=
 # WECHAT_APP_ID=
 
