--- a/deploy/docker/docker-compose.yml
+++ b/deploy/docker/docker-compose.yml
@@ -16,18 +16,25 @@ services:
       - "8080"
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY:-}
-      - LLM_PROVIDER=${LLM_PROVIDER:-}
-      - LLM_MODEL=${LLM_MODEL:-}
-      - LLM_VISION_MODEL=${LLM_VISION_MODEL:-}
-      - LLM_BASE_URL=${LLM_BASE_URL:-}
-      - ALEX_VERBOSE=${ALEX_VERBOSE:-false}
-      - SESSION_STORE_PATH=/data/sessions
+      - TAVILY_API_KEY=${TAVILY_API_KEY:-}
+      - ARK_API_KEY=${ARK_API_KEY:-}
+      - AUTH_JWT_SECRET=${AUTH_JWT_SECRET:-}
+      - AUTH_DATABASE_URL=${AUTH_DATABASE_URL:-}
+      - AUTH_BOOTSTRAP_PASSWORD=${AUTH_BOOTSTRAP_PASSWORD:-}
+      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET:-}
       - ALEX_SESSION_DATABASE_URL=${ALEX_SESSION_DATABASE_URL:-postgres://alex:alex@auth-db:5432/alex_auth?sslmode=disable}
+      - ALEX_WEB_SESSION_DIR=/data/sessions
+      - CLOUDFLARE_ACCOUNT_ID=${CLOUDFLARE_ACCOUNT_ID:-}
+      - CLOUDFLARE_ACCESS_KEY_ID=${CLOUDFLARE_ACCESS_KEY_ID:-}
+      - CLOUDFLARE_SECRET_ACCESS_KEY=${CLOUDFLARE_SECRET_ACCESS_KEY:-}
+      - CLOUDFLARE_BUCKET=${CLOUDFLARE_BUCKET:-}
+      - CLOUDFLARE_PUBLIC_BASE_URL=${CLOUDFLARE_PUBLIC_BASE_URL:-}
+      - CLOUDFLARE_ATTACHMENT_KEY_PREFIX=${CLOUDFLARE_ATTACHMENT_KEY_PREFIX:-}
       - REDIS_URL=${REDIS_URL:-}
     volumes:
       - alex-sessions:/data/sessions
       - ../../:/workspace:cached  # Mount workspace for development
-      - ~/.alex-config.json:/root/.alex-config.json:ro
+      - ~/.alex/config.yaml:/root/.alex/config.yaml:ro
     restart: unless-stopped
     depends_on:
       - redis
