--- a/deploy/docker/docker-compose.dev.yml
+++ b/deploy/docker/docker-compose.dev.yml
@@ -26,6 +26,7 @@ services:
       - CLOUDFLARE_BUCKET=${CLOUDFLARE_BUCKET:-}
       - CLOUDFLARE_PUBLIC_BASE_URL=${CLOUDFLARE_PUBLIC_BASE_URL:-}
       - CLOUDFLARE_ATTACHMENT_KEY_PREFIX=${CLOUDFLARE_ATTACHMENT_KEY_PREFIX:-}
+      - MOBILE_ADB_ADDRESS=${MOBILE_ADB_ADDRESS:-android-emulator:5555}
     volumes:
       - ../../:/app:cached
       - alex-sessions-dev:/data/sessions
@@ -86,6 +87,20 @@ services:
       retries: 10
     volumes:
       - auth-db-data:/var/lib/postgresql/data
+    restart: unless-stopped
+    networks:
+      - alex-dev-network
+
+  android-emulator:
+    image: ${ANDROID_EMULATOR_IMAGE:-budtmo/docker-android:emulator_11.0}
+    container_name: alex-android-emulator
+    ports:
+      - "5555:5555"
+      - "6080:6080"
+    environment:
+      - WEB_VNC=true
+      - EMULATOR_DEVICE=${ANDROID_EMULATOR_DEVICE:-Samsung Galaxy S10}
+    privileged: true
     restart: unless-stopped
     networks:
       - alex-dev-network
