--- a/web/package.json
+++ b/web/package.json
@@ -52,6 +52,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.3",
     "typescript": "^5.6.3",
+    "web-vitals": "^4.2.4",
     "zod": "^4.1.12",
     "zustand": "^5.0.0"
   },
