--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,10 @@ on:
       - "**/*.mdx"
   pull_request:
     branches: [main]
+    paths-ignore:
+      - "docs/**"
+      - "**/*.md"
+      - "**/*.mdx"
 
 permissions:
   contents: read
@@ -45,7 +49,8 @@ jobs:
         uses: golangci/golangci-lint-action@v6
         with:
           version: v1.64.8
-          args: --timeout=5m --out-format=colored-line-number
+          args: --timeout=10m --out-format=colored-line-number
+          cache: true
 
   test:
     name: 🧪 Test
@@ -267,7 +272,7 @@ jobs:
 
       - name: 🔎 Spot-check package comments
         run: |
-          files=$(find . -name "*.go" -not -path "./vendor/*" -not -path "./.git/*" -not -name "*_test.go")
+          files=$(rg --files -g "*.go" -g "!**/vendor/**" -g "!**/.git/**" -g "!**/*_test.go")
           missing=$(echo "$files" | xargs -r grep -L "// Package\|// Command" || true)
           if [ -n "$missing" ]; then
             echo "These files might need package-level comments:"
