--- a/web/package.json
+++ b/web/package.json
@@ -77,6 +77,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.20",
+    "baseline-browser-mapping": "^2.9.15",
     "chromatic": "^13.3.0",
     "eslint": "^9.39.1",
     "eslint-config-next": "16.0.8",
