--- a/web/package.json
+++ b/web/package.json
@@ -40,14 +40,14 @@
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.451.0",
-    "next": "16.0.8",
+    "next": "^16.1.3",
     "posthog-js": "^1.292.0",
     "prism-react-renderer": "^2.4.0",
     "qrcode": "^1.5.4",
     "quill": "^2.0.2",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
-    "react-syntax-highlighter": "^15.5.0",
+    "react-syntax-highlighter": "^16.1.0",
     "remark-gfm": "^4.0.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.3",
@@ -73,22 +73,22 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@types/react-syntax-highlighter": "^15.5.11",
-    "@vitejs/plugin-react": "^4.3.1",
-    "@vitest/coverage-v8": "^3.2.4",
-    "@vitest/ui": "^3.2.4",
+    "@vitejs/plugin-react": "^4.7.0",
+    "@vitest/coverage-v8": "^4.0.17",
+    "@vitest/ui": "^4.0.17",
     "autoprefixer": "^10.4.20",
     "baseline-browser-mapping": "^2.9.15",
     "chromatic": "^13.3.0",
     "eslint": "^9.39.1",
-    "eslint-config-next": "16.0.8",
-    "happy-dom": "^19.0.2",
+    "eslint-config-next": "16.1.3",
+    "happy-dom": "^20.3.3",
     "postcss": "^8.4.47",
     "storybook": "^8.6.14",
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
-    "vitest": "^3.2.4"
+    "vitest": "^4.0.17"
   },
   "overrides": {
-    "vite": "5.4.10"
+    "vite": "7.3.1"
   }
 }
