--- a/web/package.json
+++ b/web/package.json
@@ -34,7 +34,6 @@
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-virtual": "^3.13.12",
     "@types/lodash": "^4.17.21",
-    "@uiw/react-markdown-preview": "^5.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "immer": "^10.1.1",
@@ -48,7 +47,7 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-syntax-highlighter": "^16.1.0",
-    "remark-gfm": "^4.0.0",
+    "streamdown": "^1.0.12",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.3",
     "typescript": "^5.6.3",
