build(web): default to webpack

--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,8 @@
     "predev": "node scripts/generate-skills-catalog.js",
     "dev": "node scripts/start-dev.js",
     "prebuild": "node scripts/generate-skills-catalog.js",
-    "build": "next build",
+    "build": "next build --webpack",
+    "build:turbo": "next build --turbo",
     "start": "next start",
     "lint": "eslint . --max-warnings=0",
     "pretest": "npm run build",
