Use Turbopack for web build

--- a/web/package.json
+++ b/web/package.json
@@ -6,8 +6,9 @@
     "predev": "node scripts/generate-skills-catalog.js",
     "dev": "node scripts/start-dev.js",
     "prebuild": "node scripts/generate-skills-catalog.js",
-    "build": "next build --webpack",
+    "build": "next build --turbo",
     "build:turbo": "next build --turbo",
+    "build:webpack": "next build --webpack",
     "start": "next start",
     "lint": "eslint . --max-warnings=0",
     "pretest": "npm run build",
