--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "chromatic": "chromatic",
+    "analyze": "ANALYZE=true next build --webpack",
     "perf-benchmark": "node scripts/perf-benchmark.ts",
     "e2e": "playwright test",
     "e2e:ui": "playwright test --ui"
@@ -58,6 +59,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.55.1",
+    "@next/bundle-analyzer": "^16.1.3",
     "@storybook/addon-a11y": "^8.6.14",
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/addon-interactions": "^8.6.14",
