--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,25 +75,6 @@ jobs:
       - name: 🏗️ Web build
         run: npm --prefix web run build
 
-  web-analyze:
-    name: 📦 Web Bundle Analyze
-    runs-on: ubuntu-latest
-    needs: web
-
-    steps:
-      - name: 📥 Checkout
-        uses: actions/checkout@v4
-
-      - name: 🟢 Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: "npm"
-          cache-dependency-path: web/package-lock.json
-
-      - name: 📦 Install dependencies
-        run: npm --prefix web ci
-
       - name: 📊 Bundle analyze
         run: npm --prefix web run analyze
 
@@ -193,23 +174,26 @@ jobs:
     needs: build
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        include:
+          - os: ubuntu-latest
+            artifact: alex-linux-amd64
+          - os: macos-latest
+            artifact: alex-darwin-arm64
 
     steps:
       - name: 📥 Checkout
         uses: actions/checkout@v4
 
-      - name: 🐹 Setup Go
-        uses: actions/setup-go@v5
+      - name: 📦 Download binary
+        uses: actions/download-artifact@v4
         with:
-          go-version: ${{ env.GO_VERSION }}
-          cache: true
-
-      - name: 🏗️ Build binary
-        run: go build -o alex ./cmd/alex
+          name: ${{ matrix.artifact }}
+          path: .
 
       - name: 🔧 Make binary executable
-        run: chmod +x alex
+        run: |
+          mv ${{ matrix.artifact }} alex 2>/dev/null || mv alex-* alex
+          chmod +x alex
 
       - name: 🧭 Test CLI commands
         env:
@@ -228,14 +212,16 @@ jobs:
       - name: 📥 Checkout
         uses: actions/checkout@v4
 
-      - name: 🐹 Setup Go
-        uses: actions/setup-go@v5
+      - name: 📦 Download binary
+        uses: actions/download-artifact@v4
         with:
-          go-version: ${{ env.GO_VERSION }}
-          cache: true
+          name: alex-linux-amd64
+          path: .
 
-      - name: 🏗️ Build binary
-        run: go build -o alex ./cmd/alex
+      - name: 🔧 Make binary executable
+        run: |
+          mv alex-linux-amd64 alex 2>/dev/null || mv alex-* alex
+          chmod +x alex
 
       - name: 🗂️ Create test files
         run: |
@@ -276,7 +262,6 @@ jobs:
   security:
     name: 🔒 Security & Dependencies
     runs-on: ubuntu-latest
-    needs: [lint, test]
 
     steps:
       - name: 📥 Checkout
