--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -21,8 +21,12 @@ on:
         type: boolean
 
 env:
-  NODE_VERSION: '18'
-  GO_VERSION: '1.24.9'
+  NODE_VERSION: '20'
+  GO_VERSION: '1.24.11'
+
+concurrency:
+  group: npm-publish-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   # Job 1: Build Go binaries for all platforms
@@ -37,9 +41,10 @@ jobs:
           fetch-depth: 0
       
       - name: 🐹 Setup Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
+          cache: true
       
       - name: 📋 Get version
         id: get_version
