--- a/.github/workflows/quick-npm-publish.yml
+++ b/.github/workflows/quick-npm-publish.yml
@@ -12,24 +12,33 @@ on:
         default: false
         type: boolean
 
+env:
+  GO_VERSION: '1.24.11'
+  NODE_VERSION: '20'
+
+concurrency:
+  group: quick-npm-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   quick-publish:
     name: ⚡ Quick Publish
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: 📥 Checkout
         uses: actions/checkout@v4
-      
+
       - name: 🐹 Setup Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
-          go-version: '1.24.6'
-      
+          go-version: ${{ env.GO_VERSION }}
+          cache: true
+
       - name: 🟢 Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: ${{ env.NODE_VERSION }}
           registry-url: 'https://registry.npmjs.org'
       
       - name: 🏗️ Build & Publish
