Remove docs/AGENT.md references

--- a/configs/context/knowledge/default.yaml
+++ b/configs/context/knowledge/default.yaml
@@ -10,8 +10,8 @@ sop_refs:
   - TASK_EXECUTION_FRAMEWORK.md#context-budget--compression
   - TASK_EXECUTION_FRAMEWORK.md#observability--traceability
   - docs/guides/user_intent_understanding.md#user-intent-understanding-pipeline-prompt
-  - docs/AGENT.md#react-execution-loop
-  - docs/AGENT.md#memory--sessions
+  - docs/reference/ARCHITECTURE_AGENT_FLOW.md#react-execution-loop
+  - docs/reference/ARCHITECTURE_AGENT_FLOW.md#memory--sessions
 rag_collections:
   - context-static
   - context-observability
