--- a/.air.toml
+++ b/.air.toml
@@ -5,7 +5,7 @@ tmp_dir = "tmp"
 
 [build]
   args_bin = []
-  bin = "./tmp/alex"
+  entrypoint = ["./tmp/alex"]
   cmd = "go build -o ./tmp/alex ./cmd/alex"
   delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "testdata", "build", "release"]
