feat: Add `cron/v3` dependency, introduce plan documents for agent continuation and architecture refactoring, and update config.

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -11,6 +11,10 @@ runtime:
   verbose: false
   proactive:
     enabled: true
+    okr:
+      enabled: true
+      goals_root: "~/.alex/goals"
+      auto_inject: true
     memory:
       enabled: true
       auto_recall: true
