--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 logs/server.log.old
+logs/lark-scenarios.json
+logs/lark-scenarios.md
+logs/lark-loop.fail.txt
 
 # env
 .env*
