config: default Codex external-agent model gpt-5-codex

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -69,7 +69,7 @@ runtime:
     codex:
       enabled: false
       binary: "codex"
-      default_model: "o3"
+      default_model: "gpt-5-codex"
       approval_policy: "on-request"
       sandbox: "workspace-write"
       timeout: "30m"
